# IVS_proj2

./: odevzdani.txt
doc/html/: _c_make_lists_8txt.html  annotated.html  class_factorial__tests-members.html  class_factorial__tests.html  class_g_u_i-members.html  class_g_u_i.html  class_input__control-members.html  class_input__control.html  class_logic-members.html  class_logic.html  class_ncos__test-members.html  class_ncos__test.html  class_npow__test-members.html  class_npow__test.html  class_nroot__test-members.html  class_nroot__test.html  class_nsin__test-members.html  class_nsin__test.html  class_ntan__test-members.html  class_ntan__test.html  class_real__time__calc-members.html  class_real__time__calc.html  class_stddev__function-members.html  class_stddev__function.html  class_xpow__test-members.html  class_xpow__test.html  classes.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  (+50 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  enums_0.js  enums_1.js  enumvalues_0.js  (+51 more)
doc/latex/: _c_make_lists_8txt.tex  annotated.tex  class_factorial__tests.eps  class_factorial__tests.tex  class_g_u_i.tex  class_input__control.eps  class_input__control.tex  class_logic.tex  class_ncos__test.eps  class_ncos__test.tex  class_npow__test.eps  class_npow__test.tex  class_nroot__test.eps  class_nroot__test.tex  class_nsin__test.eps  class_nsin__test.tex  class_ntan__test.eps  class_ntan__test.tex  class_real__time__calc.eps  class_real__time__calc.tex  class_stddev__function.tex  class_xpow__test.eps  class_xpow__test.tex  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  graphics_8cpp.tex  graphics_8h.tex  hierarchy.tex  index.tex  logic_8cpp.tex  logic_8h.tex  main_8cpp.tex  our__math_8cpp.tex  our__math_8h.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  (+6 more)
install/: PP_calc-1.0.0-Linux.deb  PP_calc_dynamic-1.0.0-Linux.deb
repo/: .editorconfig  .gitignore  CMakeLists.txt  README.md  hodnoceni.txt  skutecnost.txt
repo/mockup/: mockup_description.txt
repo/plan/: xfolty17_xmihol00_xsokol15_plan.txt
repo/profiling/: stddev_profiling_10  stddev_profiling_100  stddev_profiling_1000  vystup.1.callgrind  vystup.2.callgrind  vystup.3.callgrind  zprava.txt
repo/src/: Doxyfile  Makefile
repo/src/include/: graphics.h  logic.h  our_math.h  tests.h
repo/src/installation/: PP_calc.desktop  PP_calc_dynamic.desktop  PP_calc_uninstaller
repo/src/source/: CMakeLists.txt  grap.glade  graphics.cpp  logic.cpp  main.cpp  our_math.cpp  stddev.cpp  test_mock_stub.cpp  tests.cpp
repo/src/stddev_tests/: test1  test2_fail  test3  test4_fail
